--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,9 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{path('app_home')}}">Netflux</a>
+            <a class="navbar-brand " href="{{path('app_home')}}">
+                <img src="/uploads/netflux.png" alt="logo FRWAY RP" width="150px">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
