--- a/public/assets/css/netflux.css
+++ b/public/assets/css/netflux.css
@@ -1,3 +1,9 @@
+.navbar{
+    background-color: rgb(0, 0, 0);
+}
+body{
+    background-color: black;
+}
 
 .nav_bar_button, .nav_bar_button a
 {
@@ -8,7 +14,7 @@
 {
     text-align: center;
     position: fixed;
-    background-color: #dfeaff;
+    background-color: #181818;
     bottom: 0;
     width: 100%;
 }
@@ -45,6 +51,9 @@
 .movie_item:hover .middle
 {
     opacity: 1;
+    color: white;
+
+
 }
 
 .movie_item:hover img
@@ -119,6 +128,16 @@
     }
 }
 
-.nav_img-netflux{
-    width: 50px;
+
+
+.search-color{
+    border: 3px solid #1e1e1e;
+    border-radius: 12px;
+    font-size: 20px;
+    font-weight: bold;
+    outline-offset: 0.5em;
+}
+
+.img-custom{
+    filter: drop-shadow(0 0 1rem #443434);
 }
