--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="fr" >
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,9 +19,9 @@
     <!-- Custom styles for this template -->
     <link href="{{ asset('assets/css/carousel.css') }}" rel="stylesheet">
 </head>
-<body>
+<body class=" custom-font" >
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top ">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top  custom-font">
         <div class="container-fluid">
             <a class="navbar-brand " href="{{path('app_home')}}">
                 <img src="/uploads/netflux.png" alt="Netflux LOGO" width="130px" class="px-2 py-1">
@@ -54,7 +54,7 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <div class="nav_bar_button">
+                    <div class="nav_bar_button ">
                         {% if app.user %}
                             <a href="{{ path('app_account') }}">Mon Compte <small>({{app.user.firstname}})</small></a> | <a href="{{ path('app_logout') }}">Déconnexion</a>
                         {% else %}
