--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,20 +3,22 @@
 {% block title %}Se connecter - Netflux{% endblock %}
 
 {% block content %}
-<div class="container" style="width: 50vh; color: white; font-family: AvenirFont;">
-<form method="post">
+<div class="container register-custom" >
+<form method="post" >
+    <div class="container register-custom">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous étes connéxtés en temps que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
 
 
     <h1 class="h3 mb-3 font-weight-normal">Connexion à votre espace abonné</h1>
+    <div class=" mx-auto ">
     <label for="inputEmail"class="pb-1">Votre Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control research-field" autocomplete="email" placeholder="Votre adresse email" required autofocus>
     <label for="inputPassword" class="pt-3 pb-1">Votre Mot de Passe</label>
@@ -40,6 +42,8 @@
     <button class="btn btn-lg btn-primary custom-submit" type="submit">
         Se connecter
     </button>
+    </div>
+        </div>
 </form>
     </div>
 {% endblock %}
