MAJ Remove User and Comments Cascade

--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -21,7 +21,7 @@
             <p>{{ movie.description}}</p>
 
 
-            <video title="Wildlife" preload="auto" autoplay controls width="90%">
+            <video title="{{ movie.name }}" preload="auto" autoplay controls width="90%">
                 <source src="/uploads/{{ movie.movieLink }}" type="video/mp4">
                 <p>Wildlife</p>
             </video>
