--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -3,6 +3,7 @@
 {% block title %} Modification MDP - Netflux {% endblock %}
 
 {% block content %}
+<div class="container register-custom" >
     <h1>Modification du mot de passe</h1>
     <a href="{{ path('app_account') }}">Retourner à mon Compte</a><br/>
     <hr>
@@ -11,7 +12,7 @@
     {% endif %}
 {{ form(form) }}
     <hr>
-
+</div>
 
 {% endblock %}
 
