MAJ Comment front + redirect

--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -1,7 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <h1>Ajouter Commentaire</h1>
-    {{ form(form) }}
+
+    <div class="container register-custom" >
+        <h1>Ajouter Commentaire</h1>
+        {{ form(form) }}
+    </div>
 
 {% endblock %}
