--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -23,7 +23,7 @@
 
             <video title="{{ movie.name }}" preload="auto" autoplay controls width="90%">
                 <source src="/uploads/{{ movie.movieLink }}" type="video/mp4">
-                <p>Wildlife</p>
+                <p>{{ movie.name }}</p>
             </video>
 
 
