--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,8 +10,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('icons/favicon.ico') }}" rel="icon">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
+    <script src="{{ asset('assets/js/bootstrap.bundle.js.map') }}"></script>
 
     <link href="{{ asset('assets/css/netflux.css') }}" rel="stylesheet">
 
@@ -35,24 +37,23 @@
                         <a class="nav-link" aria-current="page" href="{{path('app_movies')}}">Catalogue</a>
                     </li>
 
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Catégories
                         </a>
-                        <ul class="dropdown-menu">
-                            {% for category in getCategories() %}
-                            <li><a class="dropdown-item" href="#">{{ category.name }}</a></li>
+
+                         <ul class="dropdown-menu">
+                             {% for category in getCategories() %}
+                            <li><a class="dropdown-item" href="{{path('app_movies')}}">{{ category.name }}</a></li>
 
                             {% endfor %}
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Toutes les catégories</a></li>
+
                         </ul>
                     </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Mes Films</a>
-                    </li>
                 </ul>
+
                 <form class="d-flex" role="search">
                     <div class="nav_bar_button ">
                         {% if app.user %}
