--- a/templates/movie_list_controlleur/index.html.twig
+++ b/templates/movie_list_controlleur/index.html.twig
@@ -7,12 +7,12 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-md-2 search-color">
+        <div class="col-md-2">
             <h3 >Filtrer</h3>
             {{ form(form) }}
         </div>
         <div class="col-md-10">
-            <h3 >Nos Films</h3>
+            <h3>Nos Films</h3>
             <div class="row movie-container">
                 {% for movie in movies %}
                     <div class="col-md-2 padding-custom ">
