--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -106,7 +106,7 @@
 
 
 
-    <div class="container-fluid marketing  {% if block('carousel') is not defined %}mt-5{% endif %}">
+    <div class="container-fluid mb-5 {% if block('carousel') is not defined %}mt-5{% endif %}">
         {% block content %}
         {% endblock %}
     </div><!-- /.container -->
