--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
     <div class="row mx-3 justify-content-center text-center " >
 
         {% for movie in movies %}
-            <div class="col-md-3 img-custom" >
+            <div class="col-lg-2 col-md-3 col-sm-4 img-custom" >
                 {% include 'movie_list_controlleur/single_movie.html.twig'%}
             </div>
         {% endfor %}
