--- a/templates/movie_list_controlleur/index.html.twig
+++ b/templates/movie_list_controlleur/index.html.twig
@@ -15,7 +15,7 @@
             <h3>Nos Films</h3>
             <div class="row movie-container">
                 {% for movie in movies %}
-                    <div class="col-md-2 padding-custom ">
+                    <div class=" col-lg-2 col-md-3 col-sm-4  padding-custom">
 
                         {% include 'movie_list_controlleur/single_movie.html.twig'%}
                     </div>
