--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -16,15 +16,15 @@ body {
 /* Declare heights because of positioning of img element */
 .index_carousel .carousel-item {
 
-    height: 32rem;
+    height: 60vh;
 
 
 }
 
 
-@media (max-width: 1240px) {
+@media (max-width: 1150px) {
     .index_carousel .carousel-item {
-        height: 20rem;
+        height: 50vh;
 
 
     }
