--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -15,6 +15,7 @@
                 {% if comments %}
 
                     <h5 class="mt-5 mb-0"> Avis des spectateurs </h5>
+
                     <hr class="comment-hr">
                 {% endif %}
 
@@ -48,6 +49,7 @@
         <div class="col-md-7 mt-4 mx-auto">
             <h1>{{ movie.name }}</h1>
             <p class="fw-bold">{{ movie.subtitle }}</p>
+            <div class="icon"><i class="material-icons unselectable">thumb_up</i></div>
             <hr>
             <p>{{ movie.description}}</p>
 
