--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -10,6 +10,25 @@
     <a href="{{ path('app_account_password') }}">Modifier mot de passe</a><br/>
     <hr>
 
+    {% if likes %}
+        <h5 class="mt-5 mb-0"> Ma films favoris </h5>
+        <hr>
+    {% endif %}
+
+
+    {% for like in likes %}
+        <a href="{{ path('app_film',{'slug' : like.movie.slug}) }}">
+            <div class="container movie_item container-custom text-center">
+
+                <img src="/uploads/{{ like.movie.illustration }}" alt="{{ like.movie.name }}" class="img-fluid " style="max-height: 300px; width: auto">
+                <div class="middle center">
+                    <h5>{{ like.movie.name }}</h5>
+                </div>
+            </div>
+        </a>
+
+    {% endfor %}
+
 
 {% endblock %}
 
