--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -15,19 +15,25 @@
         <hr>
     {% endif %}
 
+    <div class="row movie-container">
+        {% for like in likes %}
+            <div class=" col-lg-2 col-md-3 col-sm-4  padding-custom">
+                <a href="{{ path('app_film',{'slug' : like.movie.slug}) }}">
+                    <div class="container movie_item container-custom text-center">
 
-    {% for like in likes %}
-        <a href="{{ path('app_film',{'slug' : like.movie.slug}) }}">
-            <div class="container movie_item container-custom text-center">
-
-                <img src="/uploads/{{ like.movie.illustration }}" alt="{{ like.movie.name }}" class="img-fluid " style="max-height: 300px; width: auto">
-                <div class="middle center">
-                    <h5>{{ like.movie.name }}</h5>
-                </div>
+                        <img src="/uploads/{{ like.movie.illustration }}" alt="{{ like.movie.name }}" class="img-fluid "
+                             style="max-height: 300px; width: auto">
+                        <div class="middle center">
+                            <h5>{{ like.movie.name }}</h5>
+                        </div>
+                    </div>
+                </a>
             </div>
-        </a>
+        {% endfor %}
 
-    {% endfor %}
+    </div>
+
+
 
 
 {% endblock %}
