--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -1,4 +1,3 @@
-
 {% extends 'base.html.twig' %}
 
 
@@ -8,53 +7,57 @@
 
     <div class="row">
         <div class="col-md-5  text-center" style="padding-top: 125px">
-            <img class="img_films img-fluid" src="/uploads/{{ movie.illustration }}" alt="{{ movie.name }}" >
+            <img class="img_films img-fluid" src="/uploads/{{ movie.illustration }}" alt="{{ movie.name }}">
             <div class="d-grid gap-2 col-6 mx-auto">
                 <a class="btn mt-4 custom-submit" href="/commentaire/{{ movie.slug }}" role="button">Ajouter un Commentaire</a>
             </div>
-                {% if comments %}
+            {% if comments %}
 
-                    <h5 class="mt-5 mb-0"> Avis des spectateurs </h5>
+                <h5 class="mt-5 mb-0"> Avis des spectateurs </h5>
 
-                    <hr class="comment-hr">
-                {% endif %}
+                <hr class="comment-hr">
+            {% endif %}
 
-                <div id="commentCarousel" class="carousel slide comment-carousel " data-bs-ride="false">
-                    <div class="carousel-inner">
-                        {% for key,comment in comments %}
-                            <div class="carousel-item {% if key ==0 %}active{% endif%} text-left">
-                                <div class="container" style="width: 80%">
+            <div id="commentCarousel" class="carousel slide comment-carousel " data-bs-ride="false">
+                <div class="carousel-inner">
+                    {% for key,comment in comments %}
+                        <div class="carousel-item {% if key ==0 %}active{% endif %} text-left">
+                            <div class="container" style="width: 80%">
 
                                 <h5>{{ comment.user }}</h5>
                                 <p class="text-wrap ">{{ comment.content }}</p>
 
-                                </div>
                             </div>
-                            {% if key > 0 %}
-                            <button class="carousel-control-prev" type="button" data-bs-target="#commentCarousel" data-bs-slide="prev">
+                        </div>
+                        {% if key > 0 %}
+                            <button class="carousel-control-prev" type="button" data-bs-target="#commentCarousel"
+                                    data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#commentCarousel" data-bs-slide="next">
+                            <button class="carousel-control-next" type="button" data-bs-target="#commentCarousel"
+                                    data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
-                            {% endif%}
-                        {% endfor %}
-                    </div>
-
+                        {% endif %}
+                    {% endfor %}
                 </div>
 
+            </div>
+
         </div>
+
         <div class="col-md-7 mt-4 mx-auto">
             <h1>{{ movie.name }}</h1>
             <p class="fw-bold">{{ movie.subtitle }}</p>
-            <div class="icon"><i class="material-icons unselectable">thumb_up</i></div>
+
             <hr>
-            <p>{{ movie.description}}</p>
+            <p>{{ movie.description }}</p>
 
 
-            <video title="{{ movie.name }}" preload="auto" autoplay controls width="100%" poster="/uploads/{{ movie.illustrationHeaders }}">
+            <video title="{{ movie.name }}" preload="auto" autoplay controls width="100%"
+                   poster="/uploads/{{ movie.illustrationHeaders }}">
                 <source src="/uploads/{{ movie.movieLink }}" type="video/mp4">
                 <p>{{ movie.name }}</p>
             </video>
