--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,14 +12,14 @@
 
     {% if app.user %}
         <div class="mb-3">
-            Vous étes connéctés en temps que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connectés en temps que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
     {% endif %}
 
 
     <h1 class="h3 mb-3 font-weight-normal">Connexion à votre espace abonné</h1>
     <div class=" mx-auto ">
-    <label for="inputEmail"class="pb-1">Votre Email</label>
+    <label for="inputEmail" class="pb-1">Votre Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control research-field" autocomplete="email" placeholder="Votre adresse email" required autofocus>
     <label for="inputPassword" class="pt-3 pb-1">Votre Mot de Passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control research-field" autocomplete="current-password" placeholder="Votre mot de passe" required>
@@ -28,16 +28,6 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
     <hr>
     <button class="btn btn-lg btn-primary custom-submit" type="submit">
         Se connecter
