--- a/public/assets/css/netflux.css
+++ b/public/assets/css/netflux.css
@@ -7,6 +7,7 @@
     background-color: rgb(0, 0, 0);
 }
 body{
+    color: #ffffff !important;
     background-color: black;
 }
 
@@ -220,6 +221,9 @@ select:-webkit-autofill {
     width: 50vh;
 }
 
+.like-custom{
+    color: red;
+}
 
 @media (max-width: 490px ){
     .register-custom{
@@ -227,3 +231,4 @@ select:-webkit-autofill {
         width: 90%;
     }
 }
+
