--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -48,11 +48,24 @@
 
         </div>
 
-        <div class="col-md-7 mt-4 mx-auto">
+        <div class=" col-md-7 mt-4 mx-auto">
             <h1>{{ movie.name }}</h1>
             <p class="fw-bold">{{ movie.subtitle }}</p>
+            <div class="like-custom">
+                {% if is_granted("ROLE_USER") %}
+                    {% for favories in movie.likes  %}
+                        {% if favories.user.id == app.user.id %}
+                            <a class="like-custom" href="{{ path('app_remove_favorites', {'slug': movie.slug}) }}"><i class="fas fa-heart"></i></a>
+                        {% endif %}
+                        {% else %}
+                            <a class="like-custom" href="{{ path('app_add_favorites', {'slug': movie.slug}) }}"><i  class="far fa-heart"></i></a>
 
-            <hr>
+                    {% endfor %}
+                {% endif %}
+
+
+
+            </div>
             <p>{{ movie.description }}</p>
 
 
