--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -32,6 +32,9 @@
     <button class="btn btn-lg btn-primary custom-submit" type="submit">
         Se connecter
     </button>
+        <p class="text-center mt-3"><a href="{{ path('app_reset_password') }}" class="color-custom"> Mot de passe oublié?</a></p>
+        <p class="text-center mt-3">Vous ne possédez pas de compte ?  <a href="{{ path('app_register') }}" class="color-custom"> Connectez-Vous</a></p>
+
     </div>
         </div>
 </form>
