--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -51,11 +51,10 @@
         <div class=" col-md-7 mt-4 mx-auto">
             <h1>{{ movie.name }}</h1>
             <p class="fw-bold">{{ movie.subtitle }}</p>
-            <div class="like-custom">
+            <div class="like-custom mb-2">
                 {% if is_granted("ROLE_USER") %}
                     {% for favories in movie.likes  %}
                         {% if favories.user.id == app.user.id %}
-
                             <a class="like-custom" href="/favoris/remove/{{ movie.slug }}/{{ favories.id }}"><i class="fas fa-heart"></i></a>
                         {% endif %}
                         {% else %}
