--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -16,9 +16,9 @@
         {{ form_row(form.mobilephone,{'attr':{'class':'research-field'}}) }}
         {{ form_row(form.email,{'attr':{'class':'research-field'}}) }}
         {{ form_row(form.password,{'attr':{'class':'research-field'}}) }}
-        <hr>
-        {{ form_row(form.submit, {'attr': {'class': 'custom-submit'}}) }}
 
-    {{ form_end(form) }}
+        {{ form_row(form.submit, {'attr': {'class': 'custom-submit'}}) }}
+        {{ form_end(form) }}
+        <p class="text-center">Vous possédez déjà un Compte ?  <a href="/connexion" class="color-custom"> Identifiez-Vous</a></p>
     </div>
 {% endblock %}
