MAJ MailJet réinitialisation mot de passe

--- a/templates/reset_password/index.html.twig
+++ b/templates/reset_password/index.html.twig
@@ -4,6 +4,9 @@
 
 {% block content %}
     <div class="container register-custom">
+        {% for message in app.flashes('notice') %}
+            <div class="alert alert-info">{{ message }}</div>
+        {% endfor %}
         <form method="post">
             <div class="container register-custom">
 
