--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,6 +9,9 @@
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
+        {% for message in app.flashes('notice') %}
+            <div class="alert alert-info">{{ message }}</div>
+        {% endfor %}
 
     {% if app.user %}
         <div class="mb-3">
